feat: add register page

--- a/frontend/src/styles/color.scss
+++ b/frontend/src/styles/color.scss
@@ -2,3 +2,9 @@ $color-white: #fff;
 $color-white-fade: rgba(255, 255, 255, 0.6);
 $color-dark-blue: #001a41;
 $color-light-blue: #e8eef1;
+
+$background-color-container: #FFFFFF;
+
+$text-color-primary: #FFFFFF;
+$text-color-secondary: #000000;
+$text-color-third: #8e918f
