--- a/frontend/src/components/Navbar/style.module.scss
+++ b/frontend/src/components/Navbar/style.module.scss
@@ -50,10 +50,7 @@
         }
 
         .lang {
-          font-family: Poppins, Arial, Helvetica, sans-serif;
-          font-weight: 700;
-          font-size: 1rem;
-          text-transform: uppercase;
+          @include font(18px, $font-weight-medium, $text-color-secondary);
         }
 
         .arrow {
@@ -61,22 +58,34 @@
         }
       }
     }
+
+    .login_btn{
+      text-transform: capitalize;
+      padding: .2rem 1rem;
+    }
   }
 }
 
-.menu {
-  @include directionX;
-  align-items: center;
-
-  .menuAvatar {
-    width: 1rem;
-    height: 1rem;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    margin-right: 0.5rem;
+.menu_container{
+  div:nth-of-type(3) {
+    right: 0;
+    margin-right: 1rem
   }
 
-  .menuLang {
-    font-family: Poppins, Arial, Helvetica, sans-serif;
-    font-size: 0.8rem;
+  .menu {
+    @include directionX;
+    align-items: center;
+    
+    .menuAvatar {
+      width: 1rem;
+      height: 1rem;
+      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+      margin-right: 0.5rem;
+    }
+    
+    .menuLang {
+      font-family: Poppins, Arial, Helvetica, sans-serif;
+      font-size: 0.8rem;
+    }
   }
 }
