[FE] feat: GET User Detail and PATCH Update Profile

--- a/frontend/src/styles/color.scss
+++ b/frontend/src/styles/color.scss
@@ -4,6 +4,7 @@ $color-dark-blue: #001a41;
 $color-light-blue: #e8eef1;
 
 $background-color-container: #FFFFFF;
+$background-color-gray: #8e918f;
 
 $text-color-primary: #FFFFFF;
 $text-color-secondary: #000000;
