[FE] feat: add home page and [BE] fix: GET User List

--- a/frontend/src/pages/Profile/style.module.scss
+++ b/frontend/src/pages/Profile/style.module.scss
@@ -65,7 +65,8 @@
 
                 p {
                     @include font(20px, $font-weight-regular, $text-color-secondary);
-                    margin-top: .5rem
+                    margin-top: .5rem;
+                    text-align: center;
                 }
 
                 input {
