--- a/frontend/src/pages/Home/style.module.scss
+++ b/frontend/src/pages/Home/style.module.scss
@@ -1,1 +1,104 @@
 @import '@styles/base';
+
+@import "../../styles/base.scss";
+
+.home_container{
+    background-color: $background-color-container;
+    padding: 2rem;
+    border-radius: 10px;
+    margin: 1rem 0 2rem;
+
+    .feature_container{
+        @include directionY;
+        position: relative;
+        border-radius: 10px;
+        height: 400px;
+        background-image: url("../../assets/feature_background.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+
+        .feature_text{
+            @include directionY;
+            margin: auto;
+            align-content:center;
+            padding: 0rem 3rem;
+            height: 50%;
+            justify-content: space-around;
+            position: relative;
+            z-index: 10;
+            color: white;
+
+            h5 {
+                width: 60%;
+                line-height: 3.5rem;
+                @include font(50px, $font-weight-bold, $text-color-primary)
+            }
+            
+            p {
+                @include font(18px, $font-weight-regular, $text-color-primary)
+            }
+
+            button {
+                @include font(14px, $font-weight-regular, $text-color-secondary);
+                background-color: $background-color-container;
+                margin-top: 2rem;
+                padding: .3rem 1rem;
+                align-self: flex-start;
+                text-transform: capitalize;
+            }
+        }
+
+        .feature_backdrop{
+            border-radius: 10px;
+            top: 0;
+            left: 0;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: black;
+            z-index: 5;
+            opacity: 50%;
+        }
+    }
+
+    .artist_container{
+        margin-top: 3rem;
+
+        .artist_text{
+            @include directionX;
+
+            h5{
+                @include font(20px, $font-weight-regular, $text-color-secondary);
+                margin-bottom: .5rem;
+            }
+    
+            .artist_button {
+                @include font(12px, $font-weight-regular, $text-color-secondary);
+                margin-left: auto;
+            }
+        }
+
+        .artist_list{
+            @include directionX;
+
+            .artist_item{
+                margin-right: 2rem;
+
+                .artist_item_image{
+                    border-radius: 50%;
+                    height: 150px;
+                    width: 150px;
+                }
+
+                p {
+                    margin-top: .3rem;
+                    @include font(16px, $font-weight-regular, $text-color-secondary);
+                    text-align: center;
+                }
+            }
+        }
+    }
+
+    
+}
