--- a/frontend/src/pages/Home/style.module.scss
+++ b/frontend/src/pages/Home/style.module.scss
@@ -62,10 +62,10 @@
         }
     }
 
-    .artist_container{
+    .list_container{
         margin-top: 3rem;
 
-        .artist_text{
+        .list_header{
             @include directionX;
 
             h5{
@@ -73,67 +73,35 @@
                 margin-bottom: .5rem;
             }
     
-            .artist_button {
+            .more_btn {
                 @include font(12px, $font-weight-regular, $text-color-secondary);
                 margin-left: auto;
             }
         }
 
-        .artist_list{
+        .item_wrapper{
             @include directionX;
 
-            .artist_item{
+            .item_wrapper_inner{
                 margin-right: 2rem;
+                cursor: pointer;
 
-                .artist_item_image{
+                .item_image{
                     border-radius: 50%;
                     height: 150px;
                     width: 150px;
+
+                    svg{
+                        width: 90px;
+                        height: 90px;
+                    }
                 }
 
                 p {
                     margin-top: .3rem;
                     @include font(16px, $font-weight-regular, $text-color-secondary);
                     text-align: center;
-                }
-            }
-        }
-    }
-
-    .playlist_container{
-        margin-top: 3rem;
-
-        .playlist_text{
-            @include directionX;
-
-            h5{
-                @include font(20px, $font-weight-regular, $text-color-secondary);
-                margin-bottom: .5rem;
-            }
-    
-            .playlist_button {
-                @include font(12px, $font-weight-regular, $text-color-secondary);
-                margin-left: auto;
-            }
-        }
-
-        .playlist_list{
-            @include directionX;
-
-            .playlist_item{
-                margin-right: 2rem;
-                max-width: 100%;
-
-                .playlist_item_image{
-                    border-radius: 10px;
-                    height: 150px;
-                    width: 150px;
-                }
-
-                p {
-                    margin-top: .3rem;
-                    @include font(16px, $font-weight-regular, $text-color-secondary);
-                    text-align: center;
+                    width: 8rem;
                 }
             }
         }
