--- a/frontend/src/styles/color.scss
+++ b/frontend/src/styles/color.scss
@@ -6,6 +6,8 @@ $color-light-blue: #e8eef1;
 $background-color-container: #FFFFFF;
 $background-color-gray: #8e918f;
 
+$box-color-gray: #e8eef1;
+
 $text-color-primary: #FFFFFF;
 $text-color-secondary: #000000;
 $text-color-third: #8e918f
