--- a/frontend/src/pages/Profile/style.module.scss
+++ b/frontend/src/pages/Profile/style.module.scss
@@ -40,7 +40,7 @@
             .profile_picture{
                 border-radius: 10px;
                 width: 200px;
-                height: 200px
+                height: 200px;
             }
 
             .change_btn{
@@ -60,7 +60,8 @@
                     @include directionY;
                     align-items: center;
                     justify-content: center;
-                    height:100%
+                    height:100%;
+                    cursor: pointer;
                 }
 
                 p {
