--- a/frontend/src/components/PopupMessage/style.module.scss
+++ b/frontend/src/components/PopupMessage/style.module.scss
@@ -13,20 +13,33 @@
     font-size: 0.8rem;
   }
 
-  .button {
-    width: 100%;
-    margin-top: 1rem;
-    border-radius: 1rem;
-    border: none;
-    font-family: Poppins, Arial, sans-serif;
-    padding: 0.5rem;
-    font-size: 0.7rem;
-    background-color: var(--color-button);
-    color: #ffffff;
-    cursor: pointer;
+  .btn_wrapper{
+    @include directionX;
+
+    .button {
+      width: 100%;
+      margin-top: 1rem;
+      border-radius: 1rem;
+      border: none;
+      font-family: Poppins, Arial, sans-serif;
+      padding: 0.5rem;
+      font-size: 0.7rem;
+      background-color: var(--color-button);
+      color: #ffffff;
+      cursor: pointer;
+    }
+
+    button:nth-of-type(1){
+      margin-right: 1rem;
+    }
+
+    button:nth-of-type(2){
+      margin-left: 1rem;
+    }
+    
+    .button:hover {
+      opacity: 0.8;
+    }
   }
 
-  .button:hover {
-    opacity: 0.8;
-  }
 }
