--- a/frontend/src/pages/Home/style.module.scss
+++ b/frontend/src/pages/Home/style.module.scss
@@ -79,34 +79,56 @@
             }
         }
 
-        .item_wrapper{
+        .item_container{
             @include directionX;
-
-            .item_wrapper_inner{
+            
+            .item_wrapper{
+                @include directionX;
+                position: relative;
                 margin-right: 2rem;
-                cursor: pointer;
+    
+                .toolbar{
+                    position: absolute;
+                    z-index: 5;
+                    right: 0;
+                    cursor: pointer;
+                    color: $background-color-container;
+                }
 
-                .item_image{
-                    border-radius: 10%;
-                    height: 150px;
-                    width: 150px;
+                .menu_container{
+                    position: absolute;
+                    right: 0;
+                }
 
-                    svg{
-                        width: 90px;
-                        height: 90px;
+                .button {
+                    color: $background-color-container;
+                }
+                
+                .item_wrapper_inner{
+                    cursor: pointer;
+    
+                    .item_image{
+                        border-radius: 10%;
+                        height: 150px;
+                        width: auto;
+    
+                        svg{
+                            width: 90px;
+                            height: 90px;
+                        }
                     }
-                }
-
-                .item_image_rounded{
-                    @extend .item_image;
-                    border-radius: 50%
-                }
-
-                p {
-                    margin-top: .3rem;
-                    @include font(16px, $font-weight-regular, $text-color-secondary);
-                    text-align: center;
-                    width: 8rem;
+    
+                    .item_image_rounded{
+                        @extend .item_image;
+                        border-radius: 50%
+                    }
+    
+                    p {
+                        margin-top: .3rem;
+                        @include font(16px, $font-weight-regular, $text-color-secondary);
+                        text-align: center;
+                        width: 8rem;
+                    }
                 }
             }
         }
