[FE] feat: add callback when hit API

--- a/frontend/src/pages/Home/style.module.scss
+++ b/frontend/src/pages/Home/style.module.scss
@@ -131,6 +131,12 @@
                     }
                 }
             }
+
+            p {
+                @include font(16px, $font-weight-regular, $text-color-secondary);
+                width: 100%;
+                text-align: center;
+            }
         }
     }
 }
