--- a/frontend/src/pages/SongList/style.module.scss
+++ b/frontend/src/pages/SongList/style.module.scss
@@ -67,5 +67,11 @@
                 margin-left: auto;
             }
         }
+
+        .center_text {
+            @include font(18px, $font-weight-regular, $text-color-secondary);
+            width: 100%;
+            text-align: center;
+        }
     }
 }
