--- a/frontend/src/components/MusicPlayer/style.module.scss
+++ b/frontend/src/components/MusicPlayer/style.module.scss
@@ -2,6 +2,7 @@
 
 .player_container{
     position: sticky;
+    margin-top: auto;
     bottom: 0;
     padding: 1rem;
     background-color: $background-color-container;
