--- a/frontend/src/pages/PlaylistList/style.module.scss
+++ b/frontend/src/pages/PlaylistList/style.module.scss
@@ -19,6 +19,7 @@
 
         .item_wrapper{
             @include directionX;
+            margin-top: 2rem;
 
             .item_wrapper_inner{
                 margin-right: 2rem;
@@ -41,6 +42,12 @@
                     text-align: center;
                     width: 8rem;
                 }
+            }
+
+            .center_text{
+                @include font(16px, $font-weight-regular, $text-color-secondary);
+                width: 100%;
+                text-align: center;
             }
         }
     }
