--- a/frontend/src/pages/Profile/style.module.scss
+++ b/frontend/src/pages/Profile/style.module.scss
@@ -78,6 +78,7 @@
 
         .button_wrapper{
             @include directionX;
+            margin-top: 2rem;
 
             button {
                 text-transform: capitalize;
