--- a/frontend/src/pages/CreateSong/style.module.scss
+++ b/frontend/src/pages/CreateSong/style.module.scss
@@ -94,6 +94,7 @@
 
     .btn {
         align-self: end;
+        margin-top: 2rem;
         
         button {
             text-transform: capitalize !important;
